WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 108128
[css exclusions] setting shape-inside on a parent does not relayout child blocks' inline content
https://bugs.webkit.org/show_bug.cgi?id=108128
Summary
[css exclusions] setting shape-inside on a parent does not relayout child blo...
Bear Travis
Reported
2013-01-28 16:02:52 PST
Created
attachment 185092
[details]
Dynamically sets shape-inside after 5 seconds See test file. After 5 seconds, a shape-inside is applied, but inline content is not laid out. Will relayout correctly if you zoom in/out.
Attachments
Dynamically sets shape-inside after 5 seconds
(941 bytes, text/html)
2013-01-28 16:02 PST
,
Bear Travis
no flags
Details
Initial Patch
(16.80 KB, patch)
2013-02-27 22:49 PST
,
Bear Travis
no flags
Details
Formatted Diff
Diff
Factoring code out of layoutBlock()
(18.29 KB, patch)
2013-03-01 10:54 PST
,
Bear Travis
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Bear Travis
Comment 1
2013-02-27 22:49:18 PST
Created
attachment 190659
[details]
Initial Patch
Dave Hyatt
Comment 2
2013-03-01 09:07:46 PST
Comment on
attachment 190659
[details]
Initial Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=190659&action=review
r-
> Source/WebCore/rendering/RenderBlock.cpp:1548 > +#if ENABLE(CSS_EXCLUSIONS) > + ExclusionShapeInsideInfo * info = exclusionShapeInsideInfo(); > + if (info) > + info->setNeedsLayout(info->shapeSizeDirty()); > + if (!relayoutChildren && (info || (info = layoutExclusionShapeInsideInfo()))) > + relayoutChildren = info->needsLayout(); > +#endif
Could this possibly be folded into updateRegionsAndExclusionsLogicalSize, with that method returning a bool indicating whether or not relayoutChildren is required? Just trying to reduce the footprint of this code in layoutBlock.
Bear Travis
Comment 3
2013-03-01 10:54:12 PST
Created
attachment 190988
[details]
Factoring code out of layoutBlock()
Dave Hyatt
Comment 4
2013-03-01 12:31:36 PST
Comment on
attachment 190988
[details]
Factoring code out of layoutBlock() r=me
WebKit Review Bot
Comment 5
2013-03-01 13:04:17 PST
Comment on
attachment 190988
[details]
Factoring code out of layoutBlock() Clearing flags on attachment: 190988 Committed
r144487
: <
http://trac.webkit.org/changeset/144487
>
WebKit Review Bot
Comment 6
2013-03-01 13:04:22 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug